--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,21 @@ jobs:
 
       - name: Deploy
         run: |
+          # Remove existing docs directory if it exists
+          rm -rf docs
+          
+          # Create docs directory and copy build files
           mkdir -p docs
           cp -r dist/* docs/
+          
+          # Configure git
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          
+          # Add and commit changes
           git add docs
-          git commit -m "Deploy to GitHub Pages"
-          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" 
+          git status
+          git commit -m "Deploy to GitHub Pages" || echo "No changes to commit"
+          
+          # Push changes
+          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" || echo "No changes to push" 
